# KATS

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py
app/account/: __init__.py  kis_domestic_account_summary_adapter.py  kis_domestic_balance_adapter.py
app/backtest/: __init__.py  backtest_engine.py  backtest_portfolio.py  backtest_runner.py  historical_data_provider.py  market_replay_engine.py  performance_analyzer.py  sample_data.py  virtual_order_executor.py
app/bootstrap/: __init__.py  application_bootstrap.py  broker_wiring.py  health_check.py  plugin_wiring.py  service_wiring.py
app/broker/: __init__.py
app/chart/: __init__.py  candle.py  candle_builder.py  (+4 more)
config/: default.json  development.json  production.json  simulation.json
docs/: 00_PROJECT.md  01_MASTER_PROMPT.md  02_ARCHITECTURE.md  03_CODING_RULE.md  04_DATABASE.md  05_API_LAYER.md  06_AUTH.md  07_SERVICE_LAYER.md  08_DOMAIN_MODEL.md  09_EVENT_SYSTEM.md  10_CONFIGURATION.md  11_PROJECT_STRUCTURE.md  12_DEVELOPMENT_ROADMAP.md  13_UI_ARCHITECTURE.md  14_STRATEGY_ENGINE.md  15_RISK_ENGINE.md  16_BACKTEST_ENGINE.md  17_DEPLOYMENT.md  18_TESTING_GUIDE.md  19_CURSOR_RULES.md  20_CODING_STANDARD.md  21_DATABASE_SCHEMA.md  22_API_INTEGRATION.md  23_KIS_OFFICIAL_GUIDE.md  VTS_VALIDATION_GUIDE.md
scripts/: build.py  package.py  run_checks.py  test_auth_token.py  test_current_price.py  test_order_inquiry.py  test_orderable_amount.py  test_vts_buy_order.py  test_ws_realtime_price.py  vts_common.py
tests/: __init__.py  conftest.py
(+564 files in other folders)
